# travel-trails-server

./: .gitignore  CMakeLists.txt  automatic-reconstruction.sh  colmap-entrypoint.py  colmap-interactive.sh  info.txt  run-colmap-build-model.sh  server-down.sh  server-run.sh  setup.md  setup_colmap.sh  tt.yaml
experiments/: gallery_template.txt  gallery_template2.html  genmodel.py  image_gallery.html  image_gallery_hippo.html  image_gallery_lincoln.html  image_search.py  image_tools.py  test_server.py
tt-colmap/: Dockerfile  entrypoint.sh  pyproject.toml  run-colmap-build-model.sh  run-colmap-container-interactive.sh  run-colmap-container.sh
tt-colmap/colmap-server/: colmap-server.py
tt-pg/: Dockerfile
tt-server/: Dockerfile  DockerfileNEW  DockerfileOLD  README.md  entrypoint.sh  mypy.ini  pyproject.toml  test_e2e.py
tt-server/migrations/: alembic.ini  env.py
tt-server/migrations/versions/: 0ca25cb82880_user_profile_pic_length.py  4a1036e508b6_user_profile_pic_length.py  e0fdc282082d_model_image_url.py  e2462e2de86b_user.py  ee9ce6b92b5b_user_profile_pic_length.py  f5fb61a752f0_location_and_image.py
tt-server/server/: colmap_entrypoint.py  constants.py  converter.py  image_tools.py  server.py  server_dashboard.py  utils.py
tt-server/server/models/: __init__.py  location.py  user.py
tt-server/server/static/: gallery.css
tt-server/server/static/css/: gallery.css
tt-server/server/templates/: addmedia.html  addmodel.html  colmapjobqueue.html  createmodel.html  gallery.html  index.html  updatemodel.html  viewmodel.html
