[tool.poetry]
name = "travel-trails-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
pycolmap = "^0.3.0"
GeoAlchemy2 = "^0.12.5"
shapely = "^1.8.5.post1"
requests = "^2.28.1"
open3d = {file = "open3d-0.16.0-cp39-cp39-manylinux_2_27_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
Faker = "^15.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
